--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -964,20 +964,41 @@ button {
 .froala-editor .video-wrapper p button {
   float: right;
 }
+.froala-editor .video-wrapper p.or {
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
+  font-weight: bold;
+}
+.froala-editor .video-wrapper input,
 .froala-editor .video-wrapper textarea {
-  width: 290px;
-  padding: 5px;
-  height: 65px;
-  overflow-x: auto;
+  padding: 0 5px;
+  font-size: 12px;
   margin: 0 5px;
-  resize: none;
+  margin: 5px;
   border: solid 1px #cccccc;
 }
+.froala-editor .video-wrapper input:focus,
 .froala-editor .video-wrapper textarea:focus {
   border-color: #66afe9;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 2px rgba(102, 175, 233, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 2px rgba(102, 175, 233, 0.6);
+}
+.froala-editor .video-wrapper input {
+  height: 21px;
+  width: 250px;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+.froala-editor .video-wrapper textarea {
+  width: 290px;
+  height: 45px;
+  padding: 5px;
+  overflow-y: auto;
+  resize: none;
+  margin-bottom: 0;
 }
 .froala-editor .link-wrapper p {
   margin: 10px 5px;
